--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,10 @@
 {
-    "presets": [
-        ["es2015", { "loose": true }],
-        "react"
-    ],
-    "plugins": [
-        "transform-object-rest-spread",
-        ["bem-import", {
-            "techs": ["js"]
-        }]
-    ]
+  "plugins": [
+    "transform-object-rest-spread",
+    ["bem-import", { "techs": ["js"] }]
+  ],
+  "presets": [
+    ["env", { "loose": true }],
+    "react"
+  ]
 }
