--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js"
   },
   "jest": {
     "transform": {
@@ -16,20 +17,30 @@
     }
   },
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
     "bem-react-core": "1.0.0-rc.10",
     "bem-tools-core": "0.0.3",
     "bem-tools-create": "2.2.0",
-    "eslint": "4.4.1",
+    "preact": "^8.2.7",
     "react": "16.3.1",
     "react-app-rewired": "1.5.0",
     "react-dom": "16.3.1",
     "react-scripts": "1.0.17"
   },
   "devDependencies": {
+    "ajv": "^6.4.0",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-bem-import": "1.5.3",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jest-cli": "22.4.3",
     "rewire-bem-sets": "1.0.1"
   }
