--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "16.3.1",
     "react-app-rewired": "1.5.0",
     "react-dom": "16.3.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "ajv": "^6.4.0",
