--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "serve": "serve -s build",
     "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js"
@@ -43,6 +44,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "jest-cli": "22.4.3",
-    "rewire-bem-sets": "1.0.1"
+    "rewire-bem-sets": "1.0.1",
+    "serve": "^6.5.5"
   }
 }
